include/cryptanalysis/ca_ffi.h

typedef struct ca_ctx ca_ctx;
/* ---- solver options ----------------------------------------------------- */
typedef struct ca_ffi_options {
    uint32_t threads;            /* rho: worker threads (0 => 1) */
    uint32_t reserved0;
    uint64_t seed;               /* 0 => random */
    uint64_t max_ops;            /* 0 => unlimited */
    /* bsgs */
    uint64_t bsgs_table_size;    /* 0 => sqrt(width) */
    /* rho */
    uint32_t rho_r;              /* 0 => auto */
    int32_t  rho_dp_bits;        /* -1 => auto */
    uint32_t rho_walks_per_thread;
    int32_t  rho_negation_map;   /* 1 => use when available */
    uint64_t rho_max_table_entries;
    /* kangaroo */
    uint32_t kangaroo_herd_size; /* 0 => auto */
    int32_t  kangaroo_dp_bits;   /* -1 => auto */
    uint32_t kangaroo_jumps;     /* 0 => auto */
    uint32_t reserved1;
    /* grumpy giants */
    uint64_t grumpy_m;           /* 0 => alpha*sqrt(width) */
    double   grumpy_alpha;       /* 0 => 0.7 */
    /* dlog driver */
    int32_t  solver;             /* ca_solver: 0 auto, 1 bsgs, 2 rho, 3 kangaroo, 4 grumpy, 5 brute */
    int32_t  reserved2;
    uint64_t bsgs_max_prime;     /* auto: BSGS for prime factors <= this (0 => 2^36) */
} ca_ffi_options;
CA_API void ca_ffi_options_default(ca_ffi_options *o);
CA_API size_t ca_ffi_options_size(void);
CA_API size_t ca_stats_size(void);
CA_API size_t ca_ic_params_size(void);
CA_API size_t ca_ic_stats_size(void);
/* ---- discrete logarithm solvers ---------------------------------------- */
/* Interval solvers: x in [lo, hi]; lo == hi == 0 means the whole group. */
CA_API int ca_ffi_bsgs(const ca_ctx *ctx, const uint64_t base[4], const uint64_t target[4],
                       uint64_t lo, uint64_t hi, const ca_ffi_options *o, uint64_t *x, ca_stats *st);
CA_API int ca_ffi_kangaroo(const ca_ctx *ctx, const uint64_t base[4], const uint64_t target[4],
                           uint64_t lo, uint64_t hi, const ca_ffi_options *o, uint64_t *x, ca_stats *st);
CA_API int ca_ffi_grumpy(const ca_ctx *ctx, const uint64_t base[4], const uint64_t target[4],
                         uint64_t lo, uint64_t hi, const ca_ffi_options *o, uint64_t *x, ca_stats *st);
/* Whole-group solvers (need ctx order). */
CA_API int ca_ffi_rho(const ca_ctx *ctx, const uint64_t base[4], const uint64_t target[4],
                      const ca_ffi_options *o, uint64_t *x, ca_stats *st);
/* Pohlig-Hellman + selected solver. */
CA_API int ca_ffi_dlog(const ca_ctx *ctx, const uint64_t base[4], const uint64_t target[4],
                       const ca_ffi_options *o, uint64_t *x, ca_stats *st);
/* ---- Cheon ---------------------------------------------------------------- */
CA_API int ca_ffi_cheon(const ca_ctx *ctx, const uint64_t gen[4], const uint64_t g_alpha[4],
                        const uint64_t g_alpha_d[4], uint64_t d, uint64_t max_exps,
                        uint64_t *alpha, ca_stats *st);
CA_API int ca_ffi_cheon_instance(const ca_ctx *ctx, const uint64_t gen[4], uint64_t alpha,
                                 uint64_t d, uint64_t g_alpha[4], uint64_t g_alpha_d[4]);
CA_API uint64_t ca_ffi_cheon_best_divisor(uint64_t p, double *cost_exps);
/* ---- index calculus (the ca_ic_* API in ca_indexcalc.h is already flat) --- */
CA_API int ca_ffi_ic_solve(uint64_t p, uint64_t g, uint64_t h, const ca_ic_params *params,
                           uint64_t *x, ca_ic_stats *st);
/* ---- number theory helpers (also exported for bindings) ------------------- */
CA_API int ca_ffi_is_prime(uint64_t n);
CA_API uint64_t ca_ffi_next_prime(uint64_t n);
CA_API uint64_t ca_ffi_primitive_root(uint64_t p);
CA_API uint64_t ca_ffi_powmod(uint64_t b, uint64_t e, uint64_t m);
CA_API uint64_t ca_ffi_invmod(uint64_t a, uint64_t m);
/* Factor n into up to cap (prime, exponent) pairs; returns the count. */
CA_API unsigned ca_ffi_factorize(uint64_t n, uint64_t *primes, unsigned *exps, unsigned cap);