include/cryptanalysis/ca_indexcalc.h

typedef struct ca_ic_params {
    ca_ic_method method;
    uint32_t factor_base_bound;  /* B; 0 => auto from the size of p */
    uint32_t sieve_radius;       /* C (linear sieve only); 0 => auto */
    uint32_t threads;            /* relation collection threads; 0 => 1 */
    uint32_t extra_relations;    /* relations beyond #unknowns; 0 => auto */
    uint64_t seed;               /* 0 => random */
    uint64_t max_relation_tries; /* random-exponent method: abort bound (0 = none) */
    int verbose;                 /* stage reports on stderr */
} ca_ic_params;
typedef struct ca_ic_stats {
    uint32_t factor_base_size;   /* primes in the factor base */
    uint32_t unknowns;           /* columns of the relation matrix */
    uint32_t relations;          /* relations collected */
    uint32_t verified_logs;      /* factor-base logs verified */
    uint64_t sieve_candidates;   /* values passed to trial division */
    uint64_t smooth_tests;       /* random-exponent method: candidates tested */
    double   sieve_seconds;
    double   linalg_seconds;
    double   total_seconds;
    uint32_t lanczos_iterations;
    uint32_t threads;
} ca_ic_stats;
typedef struct ca_ic_ctx ca_ic_ctx;
CA_API void ca_ic_params_default(ca_ic_params *p);
/* Choose (B, C) automatically for a modulus of the given bit length. */
CA_API void ca_ic_auto_params(unsigned bits, uint32_t *B, uint32_t *C);
/* Precompute the factor-base logarithms with respect to g (any element of
 * (Z/pZ)^*; internally a primitive root is used and the base change is
 * done in ca_ic_log).  p must be an odd prime. */
CA_API ca_status ca_ic_precompute(uint64_t p, uint64_t g, const ca_ic_params *params,
                                  ca_ic_ctx **out, ca_ic_stats *st);
CA_API void ca_ic_free(ca_ic_ctx *ctx);
/* Individual logarithm: find x with g^x == h (mod p), x in [0, ord(g)). */
CA_API ca_status ca_ic_log(ca_ic_ctx *ctx, uint64_t h, uint64_t *x, ca_stats *st);
/* One-shot convenience wrapper. */
CA_API ca_status ca_ic_solve(uint64_t p, uint64_t g, uint64_t h, const ca_ic_params *params,
                             uint64_t *x, ca_ic_stats *st);
/* Introspection */
CA_API uint64_t ca_ic_modulus(const ca_ic_ctx *ctx);
CA_API uint32_t ca_ic_factor_base_size(const ca_ic_ctx *ctx);
/* Logarithm (w.r.t. the internal primitive root) of the i-th factor-base
 * prime; returns 0 and sets *known = 0 if it was not determined. */
CA_API uint64_t ca_ic_factor_base_log(const ca_ic_ctx *ctx, uint32_t i, uint32_t *prime, int *known);
CA_API uint64_t ca_ic_primitive_root(const ca_ic_ctx *ctx);