bindings/rust/cryptanalysis-sys/src/lib.rs


    /// Baby-step giant-step.
    pub fn ca_ffi_bsgs(
        ctx: *const CaCtx,
        base: *const u64,
        target: *const u64,
        lo: u64,
        hi: u64,
        o: *const CaFfiOptions,
        x: *mut u64,
        st: *mut CaStats,
    ) -> c_int;
    /// Pollard's kangaroo (lambda) method.
    pub fn ca_ffi_kangaroo(
        ctx: *const CaCtx,
        base: *const u64,
        target: *const u64,
        lo: u64,
        hi: u64,
        o: *const CaFfiOptions,
        x: *mut u64,
        st: *mut CaStats,
    ) -> c_int;
    /// Grumpy giants.
    pub fn ca_ffi_grumpy(
        ctx: *const CaCtx,
        base: *const u64,
        target: *const u64,
        lo: u64,
        hi: u64,
        o: *const CaFfiOptions,
        x: *mut u64,
        st: *mut CaStats,
    ) -> c_int;
    /// Pollard rho over the whole group (needs the context order).
    pub fn ca_ffi_rho(
        ctx: *const CaCtx,
        base: *const u64,
        target: *const u64,
        o: *const CaFfiOptions,
        x: *mut u64,
        st: *mut CaStats,
    ) -> c_int;
    /// Pohlig-Hellman + the solver selected in `o`.
    pub fn ca_ffi_dlog(
        ctx: *const CaCtx,
        base: *const u64,
        target: *const u64,
        o: *const CaFfiOptions,
        x: *mut u64,
        st: *mut CaStats,
    ) -> c_int;

    // ---- Cheon -------------------------------------------------------------

    /// Cheon's attack: recover `alpha` from `g`, `g^alpha`, `g^(alpha^d)` with `d | order - 1`.
    pub fn ca_ffi_cheon(
        ctx: *const CaCtx,
        gen: *const u64,
        g_alpha: *const u64,
        g_alpha_d: *const u64,
        d: u64,
        max_exps: u64,
        alpha: *mut u64,
        st: *mut CaStats,
    ) -> c_int;
    /// Build a Cheon instance `(g^alpha, g^(alpha^d))` for experiments.
    pub fn ca_ffi_cheon_instance(
        ctx: *const CaCtx,
        gen: *const u64,
        alpha: u64,
        d: u64,
        g_alpha: *mut u64,
        g_alpha_d: *mut u64,
    ) -> c_int;
    /// Best divisor `d` of `p - 1` for the attack; `cost_exps` (may be null)
    /// receives the estimated cost in exponentiations.
    pub fn ca_ffi_cheon_best_divisor(p: u64, cost_exps: *mut c_double) -> u64;

    // ---- index calculus ----------------------------------------------------

    /// Fill `p` with the defaults.
    pub fn ca_ic_params_default(p: *mut CaIcParams);
    /// Choose `(B, C)` automatically for a modulus of the given bit length.
    pub fn ca_ic_auto_params(bits: c_uint, b: *mut u32, c: *mut u32);
    /// Precompute the factor-base logarithms w.r.t. `g` modulo the odd prime `p`.
    pub fn ca_ic_precompute(
        p: u64,
        g: u64,
        params: *const CaIcParams,
        out: *mut *mut CaIcCtx,
        st: *mut CaIcStats,
    ) -> c_int;
    /// Free an index-calculus context (null is fine).
    pub fn ca_ic_free(ctx: *mut CaIcCtx);
    /// Individual logarithm: `x` with `g^x == h (mod p)`, `x in [0, ord(g))`.
    /// Mutates the context (caches the log of `g` on first use).
    pub fn ca_ic_log(ctx: *mut CaIcCtx, h: u64, x: *mut u64, st: *mut CaStats) -> c_int;
    /// One-shot convenience wrapper.
    pub fn ca_ic_solve(
        p: u64,
        g: u64,
        h: u64,
        params: *const CaIcParams,
        x: *mut u64,
        st: *mut CaIcStats,
    ) -> c_int;
    /// Same as [`ca_ic_solve`], re-exported through the flat ABI.
    pub fn ca_ffi_ic_solve(
        p: u64,
        g: u64,
        h: u64,
        params: *const CaIcParams,
        x: *mut u64,
        st: *mut CaIcStats,
    ) -> c_int;
    /// The modulus of a precomputed context.
    pub fn ca_ic_modulus(ctx: *const CaIcCtx) -> u64;
    /// Number of primes in the factor base.
    pub fn ca_ic_factor_base_size(ctx: *const CaIcCtx) -> u32;
    /// Log (w.r.t. the internal primitive root) of the i-th factor-base prime;
    /// returns 0 and sets `*known = 0` if it was not determined.
    pub fn ca_ic_factor_base_log(
        ctx: *const CaIcCtx,
        i: u32,
        prime: *mut u32,
        known: *mut c_int,
    ) -> u64;
    /// The primitive root used internally.
    pub fn ca_ic_primitive_root(ctx: *const CaIcCtx) -> u64;

    // ---- number theory helpers -------------------------------------------

    /// 1 if `n` is prime.
    pub fn ca_ffi_is_prime(n: u64) -> c_int;
    /// Smallest prime strictly greater than `n`.
    pub fn ca_ffi_next_prime(n: u64) -> u64;
    /// Smallest primitive root modulo the prime `p`.
    pub fn ca_ffi_primitive_root(p: u64) -> u64;
    /// `b^e mod m`.
    pub fn ca_ffi_powmod(b: u64, e: u64, m: u64) -> u64;
    /// `a^-1 mod m` (0 if it does not exist).
    pub fn ca_ffi_invmod(a: u64, m: u64) -> u64;
    /// Factor `n` into up to `cap` (prime, exponent) pairs; returns the total
    /// count (which may exceed `cap`, in which case only `cap` were written).
    pub fn ca_ffi_factorize(n: u64, primes: *mut u64, exps: *mut c_uint, cap: c_uint) -> c_uint;
}

#[cfg(test)]
mod tests {
    use super::*;
    use core::mem::size_of;

    #[test]
    fn struct_sizes_match_c() {
        unsafe {
            assert_eq!(size_of::<CaFfiOptions>(), ca_ffi_options_size());
            assert_eq!(size_of::<CaStats>(), ca_stats_size());
            assert_eq!(size_of::<CaIcParams>(), ca_ic_params_size());
            assert_eq!(size_of::<CaIcStats>(), ca_ic_stats_size());
        }
    }

    #[test]
    fn defaults_look_sane() {
        let mut o = CaFfiOptions {
            threads: 0,
            reserved0: 0,
            seed: 0,
            max_ops: 0,
            bsgs_table_size: 0,
            rho_r: 0,
            rho_dp_bits: 0,
            rho_walks_per_thread: 0,
            rho_negation_map: 0,
            rho_max_table_entries: 0,
            kangaroo_herd_size: 0,
            kangaroo_dp_bits: 0,
            kangaroo_jumps: 0,
            reserved1: 0,
            grumpy_m: 0,
            grumpy_alpha: 0.0,
            solver: 0,
            reserved2: 0,
            bsgs_max_prime: 0,
        };
        unsafe { ca_ffi_options_default(&mut o) };
        assert_eq!(o.threads, 1);
        assert_eq!(o.rho_dp_bits, -1);
        assert_eq!(o.kangaroo_dp_bits, -1);
        assert_eq!(o.rho_negation_map, 1);
        assert_eq!(o.grumpy_alpha, 0.7);
        assert_eq!(o.solver, CA_SOLVER_AUTO);
    }

    #[test]
    fn version_and_helpers() {
        unsafe {
            let v = ca_version();
            assert!(!v.is_null());
            assert_eq!(*v, b'0' as c_char);
            assert_eq!(ca_ffi_is_prime(1000003), 1);
            assert_eq!(ca_ffi_powmod(2, 10, 1000), 24);
        }
    }
}
